created migrations, updated swagger, created token parsing
